# PANDORA_HOME

./: README.md
PFH_Features/: CMakeLists.txt  READ_ME.txt  test_nearest_neighbors.cpp
PFH_Features/driller/: Oldmesh.ply
PFH_Features/driller/RenderedPoses/: renderedPose0.pcd  renderedPose1.pcd  renderedPose2.pcd  renderedPose3.pcd  renderedPose4.pcd  renderedPose5.pcd  renderedPose6.pcd  renderedPose7.pcd  renderedPose8.pcd  renderedPose9.pcd
PFH_Features/driller/data/: depth1.dpt  depth3.dpt  depth4.dpt  depth5.dpt  depth6.dpt  depth7.dpt  depth8.dpt  depth9.dpt  rot0.rot  rot2.rot  rot3.rot  rot4.rot  rot5.rot  rot6.rot  rot7.rot  rot8.rot  rot9.rot  tra0.tra  tra1.tra  tra3.tra  tra4.tra  tra5.tra  tra6.tra  tra7.tra  tra8.tra  tra9.tra
PFH_Features/driller/data/testingNewPoses/: newPose_1.pcd  newPose_10.pcd  newPose_11.pcd  newPose_2.pcd  newPose_3.pcd  newPose_4.pcd  newPose_7.pcd  newPose_9.pcd
PFH_Features/food_can/food_can_1/: food_can_1_1_1.pcd  food_can_1_1_10.pcd  food_can_1_1_13.pcd  food_can_1_1_16.pcd  food_can_1_1_18.pcd  food_can_1_1_19.pcd  food_can_1_1_6.pcd  food_can_1_1_7.pcd
PFH_Features/include/: create_features.h
PFH_Features/src/: create_features.cpp  main.cpp  png2pcd.cpp  test_Features.cpp  transform2pcd.cpp
PFH_Features/test_driller/: 4_PFH.pcd  5_PFH.pcd  7_PFH.pcd  kdtree.idx  training_data.h5  training_data.list
PFH_Features/test_driller/testingNewPoses/: newPose_0.pcd  newPose_5.pcd  newPose_6.pcd  newPose_8.pcd
PFH_Features/train_driller/: 0_PFH.pcd  2_PFH.pcd  3_PFH.pcd  4_PFH.pcd  5_PFH.pcd  6_PFH.pcd  7_PFH.pcd  8_PFH.pcd  9_PFH.pcd  kdtree.idx  training_data.h5  training_data.list
Rendering/: CMakeLists.txt  Rendering.cpp  show_pcd.cpp
Rendering/driller/: mesh.ply
Rendering/driller/data/: depth0.dpt  depth2.dpt  rot1.rot  tra2.tra
VFH_Features/: CMakeLists.txt  READ_ME.txt  test_nearest_neighbors.cpp
VFH_Features/food_can/food_can_1/: food_can_1_1_11.pcd  food_can_1_1_12.pcd  food_can_1_1_14.pcd  food_can_1_1_15.pcd  food_can_1_1_17.pcd  food_can_1_1_2.pcd  food_can_1_1_20.pcd  food_can_1_1_3.pcd  food_can_1_1_4.pcd  food_can_1_1_5.pcd  food_can_1_1_8.pcd  food_can_1_1_9.pcd
VFH_Features/food_can/food_can_14/: food_can_14_1_1.pcd
VFH_Features/include/: create_features.h
VFH_Features/rgbd-dataset/apple/apple_1/: apple_1_1_10.pcd  apple_1_1_100.pcd  apple_1_1_101.pcd  apple_1_1_102.pcd  apple_1_1_103.pcd  apple_1_1_104.pcd  apple_1_1_105.pcd  apple_1_1_106.pcd  apple_1_1_107.pcd  apple_1_1_108.pcd  apple_1_1_109.pcd  apple_1_1_11.pcd  apple_1_1_110.pcd  apple_1_1_111.pcd  apple_1_1_112.pcd  apple_1_1_113.pcd  apple_1_1_114.pcd  apple_1_1_115.pcd  apple_1_1_116.pcd  apple_1_1_117.pcd  apple_1_1_118.pcd  apple_1_1_119.pcd  apple_1_1_12.pcd  apple_1_1_120.pcd  apple_1_1_121.pcd  apple_1_1_122.pcd  apple_1_1_123.pcd  apple_1_1_124.pcd  apple_1_1_125.pcd  apple_1_1_126.pcd  apple_1_1_127.pcd  apple_1_1_128.pcd  apple_1_1_129.pcd  apple_1_1_13.pcd  apple_1_1_130.pcd  apple_1_1_131.pcd  apple_1_1_132.pcd  apple_1_1_133.pcd  apple_1_1_134.pcd  apple_1_1_135.pcd  (+558 more)
VFH_Features/src/: create_features.cpp  main.cpp  vfh_features.cpp
background_subtraction/: CMakeLists.txt
background_subtraction/include/: BackgroundSubtraction.h  planarSegmentation.h
background_subtraction/src/: BackgroundSubtraction.cpp  main.cpp  planarSegmentation.cpp
camera-calibration/: CMakeLists.txt  Left.xml  README.txt  Right.xml  Stereo.xml
camera-calibration/include/: Utilities.h  monocularCamera.h  monocularCameraCalibrator.h  stereoCamera.h  stereoCameraCalibrator.h
camera-calibration/src/: Utilities.cpp  main.cpp  monocularCamera.cpp  monocularCameraCalibrator.cpp  stereoCamera.cpp  stereoCameraCalibrator.cpp
pose_estimation/: CMakeLists.txt  Output.xml  Parameters.xml
pose_estimation/include/: poseEstimation.h
pose_estimation/src/: main.cpp  poseEstimation.cpp
